Updates from Overleaf

--- a/chap2-motivation_for_steriles.tex
+++ b/chap2-motivation_for_steriles.tex
@@ -1064,14 +1064,30 @@ From its second data collection period, \gls{katrin} has analysed $3.76 \times 1
 \end{figure}
 
 \paragraph{\gls{microboone}}
-The \gls{microboone} experiment was designed to investigate the low energy excess of events observed by the \gls{miniboone} collaboration. A detailed description of the \gls{microboone} detector can be found in \SectionRef{sec:MicroBooNE}. \gls{microboone} analysed data from the \gls{bnb} running in neutrino mode between February 2016 and July 2018 which corresponds to an exposure $\sim 7 \times 10^{20}$ \gls{pot}. Three separate single \electron from \nue interaction analyses were performed classified by the event topology and reconstruction method namely, 
+The \gls{microboone} experiment was designed to investigate the low energy excess of events observed by the \gls{miniboone} collaboration. A detailed description of the \gls{microboone} detector can be found in \SectionRef{sec:MicroBooNE}. \gls{microboone} analysed data from the \gls{bnb} running in neutrino mode between February 2016 and July 2018 which corresponds to an exposure $\sim 7 \times 10^{20}$ \gls{pot}. A single $\gamma$ analysis along with three separate single \electron from \nue interaction analyses were performed, each classified by the event topology and reconstruction method namely, 
 \begin{itemize}
+    \item $1\gamma0p, 1\gamma1p$ (0 lepton) final state from a $\Delta$ baryon decay with Pandora being used for reconstruction. 
     \item $1\electron1p(0\pi)$ two-body \gls{ccqe} scattering final state using a deep learning approach to perform the reconstruction.
     \item $1\electron Np0\pi, 1\electron0p0\pi$ (pionless) final state using Pandora to perform the reconstruction. 
     \item $1\electron X$ inclusive scattering final state using Wire-Cell to perform the reconstruction.
 \end{itemize}
 
-The $1\electron1p$ \gls{ccqe} topology is expected to dominate at energies below 500 MeV. The analysis only considers fully contained \nue or \numu interactions with a lepton and proton in the final state. \gls{cnn} are used to distinguish track and shower like images as well as determining particle species. A Boosted Decision Tree uses kinematic and topological variables to produce a \gls{ccqe} event sample followed by a CNN to select the final candidates. The reconstructed neutrino energy range considered is 200--1200 MeV. 25 \nue candidate events were selected in this energy range which is in agreement with the background prediction of $29.0 \pm 1.9_{(sys)} \pm 5.4_{(stat)}$ events which is shown in \FigureRef{fig:microboone_machine_learning}. By mapping the low energy excess observed by \gls{miniboone} to \gls{microboone}, 11.6 \nue events are expected in addition to the background prediction which is not observed in this analysis \cite{Search_for_an_Excess_of_Electron_Neutrino_Interactions_in_MicroBooNE_Using_Multiple_Final_State_Topologies}\cite{Search_for_an_anomalous_excess_of_charged_current_quasi_elastic_nue_interactions_with_the_MicroBooNE_experiment_using_Deep_Learning_based_reconstruction}. 
+The dominant production of single photon events (with no charged leptons or pions in the final state) at \gls{bnb} energies is via the neutrino induced NC $\Delta(1232) \rightarrow N\gamma$ decay, where \textit{N} represents either a proton or neutron. The analysis searches for a single photon shower with either a single visible proton or no other visible activity which are labelled $1\gamma1p$ and $1\gamma0p$ respectively. The Pandora reconstruction framework is used to classify events as either track or shower like events followed by identifying topologies with one shower and either zero or one associated track which define the two 1$\gamma$ selections. The analysis requires that candidate events are fully contained in the fiducial volume as well as applying cuts on the shower energy, properties of the track and shower opening angle which ensures sufficient reconstruction performance as well as rejecting some backgrounds. A number of \glspl{bdt} are then used on the remaining events to further reduce backgrounds from cosmic muons, $\pi^0$ decays, \nue CC events and \numu CC events \cite{Search_for_Neutrino_Induced_Neutral_Current_Delta_Radiative_Decay_in_MicroBooNE_and_a_First_Test_of_the_MiniBooNE_Low_Energy_Excess_under_a_Single_Photon_Hypothesis}. 
+
+The dominant background in this search is due to $\Delta \rightarrow N \pi^0$ where the pion decays into 2$\gamma$'s. If one of the $\gamma$'s is not reconstructed the event may mimic a single photon event. Possible reasons a photon may not be reconstructed include: the pion decay being very asymmetric leading to one low energy $\gamma$ that is not reconstructed, the emmission of the two $\gamma$'s is highly co-linear meaning the two $\gamma$'s are reconstructed as a single shower, one of the $\gamma$'s exits the \gls{tpc} before interacting or one of the $\gamma$'s may be poorly reconstructed (due to unresponsive wires). In order to constrain this background, a $2\gamma1p$ and $2\gamma0p$ are also selected \cite{Search_for_Neutrino_Induced_Neutral_Current_Delta_Radiative_Decay_in_MicroBooNE_and_a_First_Test_of_the_MiniBooNE_Low_Energy_Excess_under_a_Single_Photon_Hypothesis}. 
+
+For the $1\gamma1p$ sample, 16 events were observed with a background prediction of $20.5 \pm 3.6_{(syst)}$, whereas for the $1\gamma0p$ sample, 153 events were observed with a background prediction of $145.1 \pm 13.8_{(syst)}$. This is shown in \FigureRef{fig:microboone_1gamma} where the $1\gamma1p$ and $1\gamma0p$ analyses are shown in the left and right plots respectively. This analysis disfavours the single photon interpretation of the \gls{miniboone} low energy excess and instead favours the nominal prediction at the 94.8\% confidence level \cite{Search_for_Neutrino_Induced_Neutral_Current_Delta_Radiative_Decay_in_MicroBooNE_and_a_First_Test_of_the_MiniBooNE_Low_Energy_Excess_under_a_Single_Photon_Hypothesis}. 
+
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width = \smallfigwidth]{figures-chap2/microboone_1gamma_1p.png}
+    \includegraphics[width = \smallfigwidth]{figures-chap2/microboone_1gamma0p.png}
+    \caption[Reconstructed shower energy spectra for the \gls{microboone} $1\gamma1p$ (left) and $1\gamma0p$ (right) analyses.]{The reconstructed shower energy spectra for the \gls{microboone} $1\gamma1p$ (left) and $1\gamma0p$ (right) analyses. In each case the top section shows the breakdown of the unconstrained background prediction whereas the bottom section shows the total unconstrained background as well as the background after the $2\gamma$ constraint has been applied \cite{Search_for_Neutrino_Induced_Neutral_Current_Delta_Radiative_Decay_in_MicroBooNE_and_a_First_Test_of_the_MiniBooNE_Low_Energy_Excess_under_a_Single_Photon_Hypothesis}.}
+    \label{fig:microboone_1gamma}
+\end{figure}
+
+
+The $1\electron1p$ \gls{ccqe} topology is expected to dominate at energies below 500 MeV. The analysis only considers fully contained \nue or \numu interactions with a lepton and proton in the final state. \gls{cnn} are used to distinguish track and shower like images as well as determining particle species. A \gls{bdt} uses kinematic and topological variables to produce a \gls{ccqe} event sample followed by a CNN to select the final candidates. The reconstructed neutrino energy range considered is 200--1200 MeV. 25 \nue candidate events were selected in this energy range which is in agreement with the background prediction of $29.0 \pm 1.9_{(sys)} \pm 5.4_{(stat)}$ events which is shown in \FigureRef{fig:microboone_machine_learning}. By mapping the low energy excess observed by \gls{miniboone} to \gls{microboone}, 11.6 \nue events are expected in addition to the background prediction which is not observed in this analysis \cite{Search_for_an_Excess_of_Electron_Neutrino_Interactions_in_MicroBooNE_Using_Multiple_Final_State_Topologies}\cite{Search_for_an_anomalous_excess_of_charged_current_quasi_elastic_nue_interactions_with_the_MicroBooNE_experiment_using_Deep_Learning_based_reconstruction}. 
 
 \begin{figure}[h!]
     \centering
