--- a/chap3-SBN_Program.tex
+++ b/chap3-SBN_Program.tex
@@ -225,7 +225,9 @@ The systematic uncertainties associated with the \gls{bnb} account for an error 
 The \gls{sbn} program is a multi-phase program. The first phase consisted only of the \gls{microboone} detector which began
 operating 2015. The main goal was to investigate the low energy excess of events observed by the \gls{miniboone} collaboration hence it is purposely located close to the same position as \gls{miniboone} was.
 
-The second phase of the program focuses on the \gls{sbnd} and \gls{icarus} detectors which act as the near and far detector respectively. The \gls{icarus} detector began data taking in 2021 and \gls{sbnd} is expected to begin data taking in early 2024. The close proximity of \gls{sbnd} to the \gls{bnb} means an unprecedented number neutrino-argon events will be observed which is expected to be of the order 2 million events a year, with 50,000 of them being \nue CC events \cite{sbnd_pot}. 
+The second phase of the program focuses on the \gls{sbnd} and \gls{icarus} detectors which act as the near and far detector respectively. The \gls{icarus} detector began data taking in 2021, whilst \gls{sbnd} is still under construction. It is expected that liquid argon filling may begin in \gls{sbnd} by early summer of 2023 and that data taking can start at the beginning of 2024. The \gls{bnb} is expected to operate until a long shutdown period which is due to start at the beginning of 2027. From 2024 to 2027, the \gls{bnb} anticipates an exposure of $(10-18) \times 10^{20}$ \gls{pot}, which is up to $\sim3$ times the predicted \gls{pot} used in the \gls{sbn} proposal \cite{sbnd_pot}.
+
+The close proximity of \gls{sbnd} to the \gls{bnb} means an unprecedented number of neutrino-argon events will be observed which is expected to be of the order 2 million events a year, with 50,000 of them being \nue CC events which is sufficient to investigate multiple exclusive channels in addition to the inclusive ones \cite{sbnd_pot}. Joint fits between \gls{sbnd} and \gls{icarus} will be performed in order to exploit the best sensitivity of the \gls{sbn} program. \gls{microboone} data may also be included to produce a three detector fit as is shown in \ChapterRef{chap:VALOR}. 
 
 
 \subsection{SBND}\label{sec:SBND}
