--- a/chap5-oscillation_inputs.tex
+++ b/chap5-oscillation_inputs.tex
@@ -60,7 +60,7 @@ In order to create confidence regions, fits are performed between a certain \tex
 
 \section{Monte Carlo Event Production}
 
-The events used in this oscillation analysis are truth based with a \textit{pseudo reconstruction} applied. Work on the reconstruction is still in progress and at the time of writing has not been sufficiently completed for it to be possible to generate a fully reconstructed event sample. The pseudo-reconstruction involves applying energy smearing and a series of cuts to try and emulate a fully reconstructed sample. The details of the cuts and smearing that were applied to each of the analyses are discussed in \SectionRef{sec:event_selection}.
+The events used in this oscillation analysis are truth based with a \textit{pseudo reconstruction} applied. Work on the reconstruction is still in progress and at the time of writing has not been sufficiently completed for it to be possible to generate a fully reconstructed event sample. The pseudo-reconstruction involves applying energy smearing and a series of cuts to try and emulate a fully reconstructed sample. The details of the cuts and smearing that were applied to each of the analyses are discussed in \SectionRef{sec:pseudo_event_reconstruction}.
 
 Both the events for the \numu and \nue sample were generated using \gls{genie}v3 (specifically the G18\_10a\_02\_11a tune) and then propagated through \gls{geant4} using the \gls{larsoft} framework \cite{GENIE}\cite{GENIE_V3_Paper}\cite{GENIE_tune}\cite{Geant4_website}\cite{larsoft}. For the \numu sample, this involved generating $\sim$1,000,000 intrinsic \numu events in each detector. The \nue sample is a little more involved since in addition to generating an intrinsic sample, an oscillated $\numu \rightarrow \nue$ sample, a dirt sample and a cosmic sample also needed to be produced. The oscillated sample is used to mimic the $\nue$ appearance signal whereas the dirt and cosmic samples are backgrounds. The other major background associated with a $\nue$ analysis involves $\numu$. A dedicated sample was not produced to emulate this, but instead, the events from the $\numu$ production were also run through the $\nue$ selection. Table \ref{T:nue_production} outlines the number of events produced for the \nue sample for each sub-sample for each detector. Additionally, the number of events that were selected from each sample are shown for all three detectors. The dirt events were produced with an additional filter at the generation stage which discarded any events where a shower above 10 MeV in the active volume was not present. This filter was used in order to remove any delta rays. Only about 1\% of dirt events would pass this filter so the number of dirt events used in the $\nue$ selection was $\sim$100,000. 
 
@@ -76,12 +76,12 @@ Dirt             & $\sim$10,000,000 & $\sim$80 & $\sim$100 & $\sim$300 \\
 Cosmic           & $\sim$100,000    & $\sim$1 & 0 & $\sim$30
 
 \end{tabular}
-\caption[Events generated and selected as part of the \nue sample.]{The number of events produced and selected for each sub-sample of the \nue analysis. The same number of events were produced in each of the three \gls{sbn} detectors.}
-\end{table}\label{T:nue_production}
+\caption[Events generated and selected as part of the \nue sample.]{The number of events produced and selected for each sub-sample of the \nue analysis. The same number of events were produced in each of the three \gls{sbn} detectors.}\label{T:nue_production}
+\end{table}
 
 The actual number of real \numu events expected in \gls{sbnd} is well over 5 million for about 3 years of data taking \cite{sbnd_pot}. Generating this many events is not feasible as part of a \gls{mc} production, hence the above number of events were generated. The \gls{mc} events produced have an associated \gls{pot} so the number of events may be scaled to the nominal \gls{pot} of each experiment. For \gls{sbnd} and \gls{icarus} the nominal \gls{pot} is $6.6 \times 10^{20}$ which corresponds to around 3 years of data taking.  Since \gls{microboone} has already been collecting data for some time, the nominal \gls{pot} is $1.32 \times 10^{21}$. Due to scaling the generated event rate to the nominal \gls{pot} this results in a non-integer number of events. %as is seen for example in \TableRef{table:sbnd_nue_event_rate}.
 
-\section{Event Reconstruction}
+\section{Event Reconstruction}\label{sec:pseudo_event_reconstruction}
 
 To emulate reconstructed energies, the true energy of particles are smeared. For the \numu sample, the following conditions are applied. Primary tracks (which is the leading muon in the final state) contained in the active volume, have their true energy smeared by scaling the energy with a Gaussian which has a standard deviation of 0.02. If the primary track is not contained, the energy is instead smeared by a Gaussian with a standard deviation that is given by $-A\lnOfbraces{BL}$,
 where \textit{L} is the track length and $A = 0.102$ and $B = 0.000612$ cm$^{-1}$ \cite{SBN_Proposal}. This emulates the multiple scatterings of the track, but in order for the track to have sufficient resolution, a minimum track length of 100 cm is required. Parameters \textit{A} and \textit{B} were chosen based on the work of \cite{ICARUS_muon_smearing}. Non-primary tracks with a true energy of less than 21 MeV are removed (21 MeV is the kinetic energy threshold for reconstructing tracks \cite{SBN_Proposal}) and any remaining tracks are smeared with a Gaussian which has a standard deviation of 0.05 \cite{SBN_Proposal}. An additional condition that the minimum smeared energy is 0 MeV is applied which ensures that negative energies do not occur.
