--- a/glossary.tex
+++ b/glossary.tex
@@ -7,6 +7,7 @@
 \newacronym{apa}{APA}{Andode Plane Assembly}
 \newacronym{arapuca}{ARAPUCA}{Argon R\&D Advanced Program at UniCAmp}
 \newacronym{argoneut}{ArgoNeuT}{Argon Neutrino Test Stand}
+\newacronym{bdt}{BDT}{Boosted Decision Tree}
 \newacronym{bnb}{BNB}{Booster Neutrino Beam}
 \newacronym{bsm}{BSM}{Beyond Standard Model}
 \newacronym{cc}{CC}{Charged Current}
