--- a/main.tex
+++ b/main.tex
@@ -37,7 +37,7 @@
 \hypersetup{%
   pdftitle = {New Physics Searches with Single Electromagnetic Shower Events at the Fermilab Short Baseline Neutrino Program},
   pdfsubject = {PhD thesis},
-  pdfkeywords = {LHCb, B, physics, LHC, heavy flavour},
+  pdfkeywords = {Physics, SBN, SBND, Neutrinos, Sterile Neutrinos, Neutrino Oscillations},
   pdfauthor = {\textcopyright\ Thomas Ham}
 }}{}
 \makeatother
