--- a/mythesis.bib
+++ b/mythesis.bib
@@ -1290,6 +1290,29 @@ url={https://doi.org/10.1038/s41586-022-05568-2}
 	journal = {Physical Review D}
 }
 
+@article{Search_for_Neutrino_Induced_Neutral_Current_Delta_Radiative_Decay_in_MicroBooNE_and_a_First_Test_of_the_MiniBooNE_Low_Energy_Excess_under_a_Single_Photon_Hypothesis,
+	doi = {10.1103/physrevlett.128.111801},
+  
+	url = {https://doi.org/10.1103%2Fphysrevlett.128.111801},
+  
+	year = 2022,
+	month = {mar},
+  
+	publisher = {American Physical Society ({APS})},
+  
+	volume = {128},
+  
+	number = {11},
+  
+	author = {P. Abratenko and R. An and J. Anthony and L. Arellano and J. Asaadi and A. Ashkenazi and S. Balasubramanian and B. Baller and C. Barnes and G. Barr and V. Basque and L. Bathe-Peters and O. Benevides Rodrigues and S. Berkman and A. Bhanderi and A. Bhat and M. Bishai and A. Blake and T. Bolton and J.{\hspace{0.167em}
+}Y. Book and L. Camilleri and D. Caratelli and I. Caro Terrazas and R. Castillo Fernandez and F. Cavanna and G. Cerati and Y. Chen and D. Cianci and J.{\hspace{0.167em}}M. Conrad and M. Convery and L. Cooper-Troendle and J.{\hspace{0.167em}}I. Crespo-Anad{\'{o}}n and M. Del Tutto and S.{\hspace{0.167em}}R. Dennis and P. Detje and A. Devitt and R. Diurba and R. Dorrill and K. Duffy and S. Dytman and B. Eberly and A. Ereditato and J.{\hspace{0.167em}}J. Evans and R. Fine and G.{\hspace{0.167em}}A. Fiorentini Aguirre and R.{\hspace{0.167em}}S. Fitzpatrick and B.{\hspace{0.167em}}T. Fleming and N. Foppiani and D. Franco and A.{\hspace{0.167em}}P. Furmanski and D. Garcia-Gamez and S. Gardiner and G. Ge and S. Gollapinni and O. Goodwin and E. Gramellini and P. Green and H. Greenlee and W. Gu and R. Guenette and P. Guzowski and L. Hagaman and O. Hen and C. Hilgenberg and G.{\hspace{0.167em}}A. Horton-Smith and A. Hourlier and R. Itay and C. James and X. Ji and L. Jiang and J.{\hspace{0.167em}}H. Jo and R.{\hspace{0.167em}}A. Johnson and Y.-J. Jwa and D. Kalra and N. Kamp and N. Kaneshige and G. Karagiorgi and W. Ketchum and M. Kirby and T. Kobilarcik and I. Kreslo and R. LaZur and I. Lepetic and K. Li and Y. Li and K. Lin and B.{\hspace{0.167em}}R. Littlejohn and W.{\hspace{0.167em}}C. Louis and X. Luo and K. Manivannan and C. Mariani and D. Marsden and J. Marshall and D.{\hspace{0.167em}}A. Martinez Caicedo and K. Mason and A. Mastbaum and N. McConkey and V. Meddage and T. Mettler and K. Miller and J. Mills and K. Mistry and A. Mogan and T. Mohayai and J. Moon and M. Mooney and A.{\hspace{0.167em}}F. Moor and C.{\hspace{0.167em}}D. Moore and L. Mora Lepin and J. Mousseau and M. Murphy and R. Murrells and D. Naples and A. Navrer-Agasson and M. Nebot-Guinot and R.{\hspace{0.167em}}K. Neely and D.{\hspace{0.167em}}A. Newmark and J. Nowak and M. Nunes and O. Palamara and V. Paolone and A. Papadopoulou and V. Papavassiliou and S.{\hspace{0.167em}}F. Pate and N. Patel and A. Paudel and Z. Pavlovic and E. Piasetzky and I.{\hspace{0.167em}}D. Ponce-Pinto and S. Prince and X. Qian and J.{\hspace{0.167em}}L. Raaf and V. Radeka and A. Rafique and M. Reggiani-Guzzo and L. Ren and L.{\hspace{0.167em}}C.{\hspace{0.167em}}J. Rice and L. Rochester and J. Rodriguez Rondon and M. Rosenberg and M. Ross-Lonergan and G. Scanavini and D.{\hspace{0.167em}}W. Schmitz and A. Schukraft and W. Seligman and M.{\hspace{0.167em}}H. Shaevitz and R. Sharankova and J. Shi and J. Sinclair and A. Smith and E.{\hspace{0.167em}}L. Snider and M. Soderberg and S. Söldner-Rembold and P. Spentzouris and J. Spitz and M. Stancari and J.{\hspace{0.167em}}St. John and T. Strauss and K. Sutton and S. Sword-Fehlberg and A.{\hspace{0.167em}}M. Szelc and W. Tang and K. Terao and C. Thorpe and D. Totani and M. Toups and Y.-T. Tsai and M.{\hspace{0.167em}}A. Uchida and T. Usher and W. Van De Pontseele and B. Viren and M. Weber and H. Wei and Z. Williams and S. Wolbers and T. Wongjirad and M. Wospakrik and K. Wresilo and N. Wright and W. Wu and E. Yandel and T. Yang and G. Yarbrough and L.{\hspace{0.167em}}E. Yates and H.{\hspace{0.167em}}W. Yu and G.{\hspace{0.167em}}P. Zeller and J. Zennamo and C. Zhang and},
+  
+	title = {Search for Neutrino-Induced Neutral-Current $\Delta$
+		 Radiative Decay in {MicroBooNE} and a First Test of the {MiniBooNE} Low Energy Excess under a Single-Photon Hypothesis},
+  
+	journal = {Physical Review Letters}
+}
+
 @article{Neutrino_Mass_Hierarchy_Vacuum_Oscillations_and_Vanishing_Ue3,
 	doi = {10.1103/physrevd.71.113009},
   
